@@ -35,6 +35,7 @@ Current:
     The recipe to build a debian package using cmake can be found at
     https://code.launchpad.net/~peterpall/wxmaxima/packaging
   * Massive speed-ups
+  * File/Open can now import .mac files from Xmaxima
   * Many additional bug fixes and stability enhancements.
 
 16.12:
